# AsyncServer

./: .clang-format  CMakeLists.txt  main.cpp
gui/: CMakeLists.txt  main.cpp
gui/inc/: mainwindow.h
gui/src/: mainwindow.cpp  mainwindow.ui
lib/: CMakeLists.txt
lib/inc/: client.h  server.h  threadSafeQueue.h  threadpool.h
lib/src/: client.cpp  server.cpp  threadSafeQueue.cpp  threadpool.cpp
sender/: CMakeLists.txt  main.cpp
